feat:separate count order out of paginate for separate of concern
