# docs/swagger.yaml
@@ -71,6 +71,28 @@ definitions:
       summary:
         $ref: '#/definitions/dto.OrderInsertSummaryDTO'
     type: object
+  dto.GetOrdersResponseDTO:
+    properties:
+      orders:
+        items:
+          $ref: '#/definitions/domain.Order'
+        type: array
+      summary:
+        $ref: '#/definitions/dto.GetOrdersSummaryDTO'
+    type: object
+  dto.GetOrdersSummaryDTO:
+    properties:
+      page:
+        type: integer
+      page_size:
+        type: integer
+      total_items:
+        type: integer
+      total_orders_on_page:
+        type: integer
+      total_pages:
+        type: integer
+    type: object
   dto.OrderInsertResultDTO:
     properties:
       error:
@@ -106,6 +128,14 @@ definitions:
     properties:
       code:
         type: string
+      message:
+        type: string
+    type: object
+  response.APIResponse:
+    properties:
+      code:
+        type: string
+      data: {}
       message:
         type: string
     type: object
@@ -149,7 +179,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/domain.Order'
+              $ref: '#/definitions/dto.GetOrdersResponseDTO'
             type: array
         "400":
           description: Bad Request
@@ -249,7 +279,8 @@ paths:
       responses:
         "200":
           description: OK
-          schema: {}
+          schema:
+            $ref: '#/definitions/response.APIResponse'
         "400":
           description: Bad Request
           schema:
